# Mimicry

./: .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  check.bat  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
sidecar/: SKILL.md  cli.py  daemon.py  dev_cli.py  fetch_browser.py  main.py  mcp_server.py  mimicry-sidecar.spec  pyproject.toml  requirements-dev.txt  requirements.txt
sidecar/browser/: actions.py  controller.py  env_check.py  profile.py  recorder.py  selector.py
sidecar/browser/scripts/: picker.js  (+1 more)
sidecar/captcha/: __init__.py  base.py  cloudflare.py
sidecar/dsl/: __init__.py  ast_nodes.py  compiler.py  lexer.py  parser.py  rpc_methods.py
sidecar/engine/: __init__.py  action_map.py  condition_parser.py  executor.py  executor_state.py
sidecar/rpc/: methods.py  protocol.py  server.py
sidecar/tests/: _bing_analysis.py  _check_webdriver.py  _gen_demos.py  _run_antidetect.py  _test_incolumitas.py  conftest.py  demo_bing_github.json  demo_direct_search.py  demo_duckduckgo_github.json  demo_google_github.json  demo_search_github.py  e2e_bing_bilibili.json  e2e_stderr.txt  e2e_stdout.txt  test_action_map.py  test_anti_detect.py  test_blocks_e2e.py  test_captcha_cloudflare.py  test_cli.py  test_condition_parser.py  test_dsl.py  test_env_check.py  test_executor.py  test_executor_init_scripts.py  test_google_search.py  test_mcp_descriptions.py  test_rpc.py  test_selector.py
src-tauri/: Cargo.toml  mimicry.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  workflow_validator.rs
src-tauri/tests/: transform_integration.rs
(+235 files in other folders)
