[project]
name = "mimicry-sidecar"
version = "0.1.0"
description = "Mimicry browser automation sidecar"
requires-python = ">=3.10"
dependencies = [
    "camoufox[geoip]>=0.4.11",
    "playwright>=1.40",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
